tests/files/flow_controller_tests/should_run/099.cmdr
x = 10;
print arcsec(x);