tests/files/flow_controller_tests/should_fail/089.cmdr
x = "cat";
print arcsec(x);